2011-06-24

	* src/summaryview.c: summary_colorlabel_menu_item_activate_item_cb():
	  removed alloca().

2011-06-23

	* src/mimeview.[ch]
	  src/textview.c: fixed a typo: mimeview_launch_part() and code
	  cleanups. Removed alloca() call.
	* src/summaryview.c
	  src/messageview.c
	  src/inc.c: removed alloca() calls.
	* libsylph/utils.[ch]: to_human_readable_buf(): new.

2011-06-16

	* src/menu.h
	  src/textview.c: use image menu item for part menu.

2011-06-15

	* src/textview.[ch]: reuse popup menu for each attachments.

2011-06-14

	* src/textview.c: textview_part_widget_destroy_notify(): fixed destroy
	  notify handler.
	  Use prelight state.
	  textview_part_widget_exposed(): draw edges as rounded.
	  textview_part_widget_button_pressed(): disable 'Copy file name'
	  menu if file name not exist.

2011-06-13

	* src/textview.c: highlight part widgets on mouse over.

2011-06-13

	* src/textview.c
	  src/mimeview.[ch]: implemented popup menu of attachments in text
	  view.

2011-06-13

	* src/textview.c: fixed handling of button release event.

2011-06-10

	* libsylph/procmsg.c
	  libsylph/libsylph-0.def: procmsg_add_messages_from_queue():
	  fixed an error when removing queued messages on win32.

2011-06-10

	* src/compose.c
	  plugin/test/test.c: changed the spec of compose-send signal
	  because the previous one prohibited sending if the signal is not
	  used.

2011-06-10

	* src/textview.c: added border line before and after headers.
	  Made attachments display more graphical.

2011-06-09

	* src/account_dialog.c
	  src/prefs_filter.c: fixed duplicated keyboard accelerators.

2011-06-08

	* libsylph/procmsg.[ch]
	  libsylph/folder.c: remove queue headers when moving messages from
	  a queue folder (fixes Debian BTS #493546).

2011-06-08

	* src/messageview.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added a new plug-in API: "messageview-show".

2011-06-08

	* src/compose.c
	  src/plugin.[ch]
	  src/plugin-marshal.list