@@ -2,6 +2,8 @@
 
 	* src/summaryview.c: summary_colorlabel_menu_item_activate_item_cb():
 	  removed alloca().
+	* libsylph/utils.c: my_tmpfile(): win32: fixed a memory leak.
+	  unix: removed alloca().
 
 2011-06-23
 
